@@ -1,5 +1,7 @@
 *SVN*
 
+* Explicitly require active_record/query_cache before using it.  [Jeremy Kemper]
+
 * Fix bug where unserializing an attribute attempts to modify a frozen @attributes hash for a deleted record.  [Rick, marclove]
 
 * Performance: absorb instantiate and initialize_with_callbacks into the Base methods. [Jeremy Kemper]
